cp project/force-app/main/default/objects/Commission_Rule__c/Commission_Rule__c.object-meta.xml
<CustomObject>
    <description>Configurable rules matrix for channel partner commission rates</description>
    <label>Commission Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>