cp project/force-app/main/default/objects/Commission_Rule__c/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <label>Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                    <default>true</default>
                    <label>Percentage</label>
                </value>
                <value>
                    <fullName>Fixed Amount</fullName>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>