cp project/force-app/main/default/objects/Commission_Rule__c/fields/Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Amount__c</fullName>
    <label>Fixed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>