cp project/force-app/main/default/objects/Commission_Rule__c/fields/Maximum_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Booking_Amount__c</fullName>
    <label>Max Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>