cp project/force-app/main/default/objects/Commission_Rule__c/fields/Minimum_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Booking_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Min Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>