cp project/force-app/main/default/objects/Commission_Rule__c/fields/Trigger_Status__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Status__c</fullName>
    <label>Trigger Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Booking Confirmed</fullName>
                </value>
                <value>
                    <fullName>Customer Payment Received</fullName>
                    <default>true</default>
                    <label>Customer Payment Received</label>
                </value>
                <value>
                    <fullName>Agreement Signed</fullName>
                </value>
                <value>
                    <fullName>Milestone Completed</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>