cp project/force-app/main/default/objects/Commission_Rule__c/validationRules/Amount_Required_For_Fixed.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Required_For_Fixed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Commission_Type__c, "Fixed Amount"), OR(ISBLANK(Fixed_Amount__c), Fixed_Amount__c &lt;= 0))</errorConditionFormula>
    <errorMessage>Fixed Amount must be greater than zero for Fixed Amount type.</errorMessage>
</ValidationRule>