cp project/force-app/main/default/objects/Commission_Rule__c/validationRules/Effective_Dates_Logical.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_Dates_Logical</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Effective_To__c)), NOT(ISBLANK(Effective_From__c)), Effective_To__c &lt; Effective_From__c)</errorConditionFormula>
    <errorMessage>Effective To cannot precede Effective From.</errorMessage>
</ValidationRule>