cp project/force-app/main/default/objects/Commission_Rule__c/validationRules/Rate_Required_For_Percentage.validationRule-meta.xml
<ValidationRule>
    <fullName>Rate_Required_For_Percentage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Commission_Type__c, "Percentage"), OR(ISBLANK(Commission_Rate__c), Commission_Rate__c &lt;= 0))</errorConditionFormula>
    <errorMessage>Commission Rate must be greater than zero for Percentage type.</errorMessage>
</ValidationRule>